WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282852
Cmd+Shift+Up/Down and Cmd+Opt+Up/Down shouldn't scroll a web page
https://bugs.webkit.org/show_bug.cgi?id=282852
Summary
Cmd+Shift+Up/Down and Cmd+Opt+Up/Down shouldn't scroll a web page
Anurag Choudhary
Reported
2024-11-08 14:34:34 PST
The designated shortcut for "Scroll to Top/Bottom" is Cmd+Up/Down. WebKit shouldn't consume Cmd+Shift+Up/Down and Cmd+Opt+Up/Down events, since these may be designated shortcuts for other actions.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-08 14:36:46 PST
<
rdar://problem/139537723
>
Anurag Choudhary
Comment 2
2024-11-08 14:44:24 PST
To be clear, Cmd+Shift+Up/Down shouldn't execute the "Scroll To Top/Bottom" action. It is the designated shortcut for "select all" when editing text in a text field, and that should continue to be the case. This bug is specific to web page scrolling.
Anurag Choudhary
Comment 3
2024-11-12 17:15:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36572
Abrar Rahman Protyasha
Comment 4
2024-11-21 16:59:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36987
EWS
Comment 5
2024-12-06 02:06:08 PST
Committed
287437@main
(1189a768e05b): <
https://commits.webkit.org/287437@main
> Reviewed commits have been landed. Closing PR #36572 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug