Source/WebCore/platform/KeyboardScrollingAnimator.cpp
@@ -124,8 +124,11 @@ const std::optional<ScrollGranularity> scrollGranularityForKeyboardEvent(const K
     case KeyboardScrollingKey::DownArrow:
         if (event.shiftKey())
             return { };
-        if (event.metaKey())
-            return ScrollGranularity::Document;
+        if (event.metaKey()) {
+            if (event.modifierKeys().hasExactlyOneBitSet())
+                return ScrollGranularity::Document;
+            return { };
+        }
         if (event.altKey())
             return ScrollGranularity::Page;
         return ScrollGranularity::Line;
